--- a/client/assets/css/_colors.scss
+++ b/client/assets/css/_colors.scss
@@ -1,7 +1,12 @@
-$chrome-bg: #555;
+// $chrome-bg: #555;
+$chrome-bg: #3d454d;
 $chrome-text: #fff;
-$chrome-under-bg: #666;
-$chrome-link: #333;
+// $chrome-under-bg: #666;
+$chrome-under-bg: #3d454d;
+
+$chrome-link-text: #b9bbbe;
+$chrome-link-selected-bg: #383f45;
+$chrome-link-selected-text: #fff;
 
 $green-bg-theme: #5cb85c;
 $green-text-theme: #5cb85c;
