--- a/client/assets/css/chrome.scss
+++ b/client/assets/css/chrome.scss
@@ -7,6 +7,8 @@
 .bg-chrome-under {
   background-color: $chrome-under-bg;
   /*box-shadow: -1px -1px 1px red;*/
+  box-shadow: -10px 0 20px 0 darken($chrome-under-bg, 4) inset;
+  border-right: 1px solid lighten($chrome-under-bg, 4);
 
   .chrome-link {
     color: $chrome-link-text;
