--- a/client/assets/css/main.scss
+++ b/client/assets/css/main.scss
@@ -1,6 +1,13 @@
 @import 'theme';
 @import 'chrome';
 
+// .page-enter-active, .page-leave-active {
+//   transition: opacity .5s;
+// }
+// .page-enter, .page-leave-active {
+//   opacity: 0;
+// }
+
 .table-lg td, .table-lg td {
   font-size: 1.5em;
   font-weight: 200;
