--- a/client/assets/css/main.scss
+++ b/client/assets/css/main.scss
@@ -8,6 +8,11 @@
 //   opacity: 0;
 // }
 
+body, html {
+	-webkit-overflow-scrolling: touch;
+	overflow: hidden;
+}
+
 .table-lg td, .table-lg td {
   font-size: 1.5em;
   font-weight: 200;
