Added id page to view details in chart of accounts. Added return to accounts button in header bar.

--- a/client/assets/css/theme.scss
+++ b/client/assets/css/theme.scss
@@ -33,3 +33,10 @@
     color: $red-text-theme !important;
   }
 }
+.return-location {
+  color: white;
+}
+.return-location:hover {
+  color: white;
+  text-decoration: none;
+}
